# Catventory

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  db.sqlite
assets/: main.css  tailwind.css
src/: main.rs
src/backend/: db.rs  mod.rs  model.rs  server_funktions.rs
src/components/: add.rs  change.rs  einzel_list.rs  get_index.rs  home.rs  item.rs  list.rs  mod.rs  nav.rs  remove.rs  show.rs
