[package]
name = "catventory-web"
version = "0.1.0"
authors = ["Mark-v-S <Mark_Siemens@gmx.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "tls-native-tls"], optional = true }
tokio = { version = "1.20.0", features = ["full"], optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "sqlx", "dep:tokio"]
